--- a/gb/ncid282_4.md
+++ b/gb/ncid282_4.md
@@ -19,7 +19,7 @@
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/11/28/n11685896.md#1" target="_blank">维州签一带一路 澳女发起请愿调查州长</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/11/28/n11685896.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/GettyImages-927700114-150x120.jpg" align ="left"></a>近期，一名澳洲女子发起了一项请愿，呼吁调查维州州长安德鲁斯（Daniel Andrews）及其政府在备受争议的“一带一路”项目中扮演的角色。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 11:38 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/11/29/n11690114.md#1" target="_blank">感恩法轮功师父 一位大陆校医的自豪</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/11/29/n11690114.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1309111924582483-600x400-150x120.jpg" align ="left"></a>在人的一生中，能有什么值得自豪呢？有的为能考上名牌大学而自豪；有的为能有当官的父母感到自豪；有的为拥有豪宅感到自豪……而我，为自己今生能有幸成为法轮功修炼者而感到无比自豪！因为法轮功使我身心受益，提高了生命质量，使我成为更健康、更高尚的人，是人世间任何一样东西都无法给予的。下面就讲讲我的亲身经历。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 11:09 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/11/29/n11689032.md#1" target="_blank">从迷失到重生 19岁少女的感恩</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/11/29/n11689032.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/a3dc7a9e5db04f4cf2f011e7f0fad412-150x120.jpg" align ="left"></a>淑怡是眉清目秀、长得很甜美的女孩，笑起来眼睛像月牙，今年19岁，有谁想到她曾经是多年的老烟民，还有过嗑药史、患有暴食症，曾在泥潭中不能自拔。不过这些令她痛苦万分的嗜好和经历，现在都已烟消云散。在28日感恩节这天，她敞开心扉讲述自己身心翻天覆地的转变——是什么让她彻底告别了过去，有了脱胎换骨的变化呢？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 4:54 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/11/29/n11687865.md#1" target="_blank">孟晚舟引渡聆讯 加国数家大型媒体要求转播</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/11/29/n11687865.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/699473283-150x120.jpg" align ="left"></a>数家大型新闻媒体正在要求加拿大卑诗省法院，在聆讯孟晚舟引渡案时，允许在法庭里使用摄像机转播，因为此案有广泛的公众关注度。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 3:43 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/4/n11699099.md#1" target="_blank">每日三退声明精选（2019/12/03）</a><br></h3>我的父亲在毛贼东及中共的欺骗下曾为中共军队作战一度几乎成为了中共的炮灰。中共野蛮地所做所为为全世界人民所震惊。中国人民只有彻底推翻共产党才能看到希望。中共在多年的统治中残害了大量无辜的百姓，吞噬了大量无辜的生命。我很高兴未曾加入过邪恶的中国共产党。在此强烈声明立刻退出中国少先队、中国共青团和中共匪的任何一切组织。我要做一个清清白白的人。希望正义的美国和善良的.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 10:59 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/3/n11697447.md#1" target="_blank">广西乡医称喝长生液活120岁 网民嘲讽</a><br></h3>近日大陆网传一张照片，一群穿着白大褂的医生围着一锅液体，横幅上写着“高手在民间 神方在乡里 广西宾阳乡医熬制长生液现场会 人类活到120岁不是神话”。此事引发网民热议，有网民讽刺：“特供，必须特供！”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 8:27 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/3/n11697266.md#1" target="_blank">福建少女遭霸凌 被同学脱衣服搧耳光</a><br></h3>11月24日，福建中华技师学院，15岁女生小小（化名）被同学和其他几名女生在寝室扒光上衣、疯狂扇耳光、揪头发、辱骂，并被拍下视频。警方称，因涉事女生都是未成年人，无法拘留，校方则仍未做出回应。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 5:10 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/3/n11696595.md#1" target="_blank">西安大妈趵突泉吐口水拍照 网民：没素质</a><br></h3>近日，在山东济南趵突泉景区，五位游玩的大妈，为了拍摄嘴巴喷水的一幕，集体向泉水吐口水，引来网民批评。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 11:11 AM							</td></tr>
