--- a/gb/nf3046_5.md
+++ b/gb/nf3046_5.md
@@ -19,7 +19,7 @@
 美国拒当侵犯人权者的避风港
 
 目前，越来越多的国家和地区的政府与人民，开始对中共邪恶本质的觉.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月13日 9:37 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/7/2/n11358618.md#1" target="_blank">明真相后 大陆公检法人员抛弃中共</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/7/2/n11358618.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/image1-150x120.jpeg" align ="left"></a>在澳洲墨尔本，有这样一个团体，他们平和理性、坚忍善良，用20年的时间反抗嗜虐成性的暴政，这个团体就是法轮功。1999年7月20日，中共发动了对信仰“真、善、忍” 的法轮功修炼者的迫害。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月06日 12:18 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/8/7/n11436160.md#1" target="_blank">每日三退声明精选（2019/08/06）</a><br></h3>中共的集体腐败，环境破坏，舆论导向，道德败坏已经把中国引到了崩溃的边缘，在中共的恐怖镇压下，中国人丧失了最基本的人权，法治成了摆设，不灭中共，中国无望。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月07日 11:51 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/8/4/n11429169.md#1" target="_blank">每日三退声明精选（2019/08/02）</a><br></h3>我是一名毕业了几年的大学生，现在的生活压力太大了，民不聊生，连工作都不好找，网上舆论监控也很严，但是还是有那么多贪官情妇社会毒瘤，共产党内部就充满了贪污腐败，我爸还是一个书记，我从小耳濡目染也知道了这其中的不为人知的黑暗，在此我退出党、退团，希望早日移民。不再忍受这暗无天日的生活。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月03日 8:32 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/8/2/n11425261.md#1" target="_blank">每日三退声明精选（2019/08/01）</a><br></h3>我这一辈子谎话说的最多的时候就是我任共产党的党委书纪期间，我早就想退党，但苦于找不到退党网站，今有同学帮我操作，特委托他帮我退党，顺便也退出共青团、少先队组织，抹去兽印。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月02日 11:13 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/8/1/n11422573.md#1" target="_blank">每日三退声明精选（2019/07/31）</a><br></h3>本人小学时莫名其妙被入了队，到了中学就觉得共党的话“假大空”，团书记几次让我入团我都坚决拒绝，长大了翻墙看到了海外新闻，更觉得共党邪恶，现声明退出恶党一切组织，绝不与恶魔为伍。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月01日 10:50 AM							</td></tr>
